# cyclecloud-scalelib

./: .env  .gitignore  .myenv  MANIFEST.in  README.md  byos.code-workspace  dev-requirements.txt  install.sh  mypy.ini  package.py  project.ini  scalelib.code-workspace  setup.cfg  setup.py
.github/workflows/: codeql.yml
conf/: logging.conf
example-celery/: README.md  project.ini
example-celery/templates/: celery.txt
mockcs/: build.sh  cluster_service_client_impl.py  cluster_service_server_impl.py  deploy.sh  dev-requirements.txt  generate_python.py  init.sh
notices/: frozendict.json  immutabledict.json  jsonpickle.json  requests.json
specs/broker/cluster-init/files/: autoscale.py  new_task.py
specs/broker/cluster-init/scripts/: 01.install.packages.sh
specs/worker/cluster-init/scripts/: 00.install.celery.sh
src/: version.py
src/hpc/autoscale/: allocate.conf  cli.py  cliinstall.py  clilib.py  clock.py  codeanalysis.py  hpclogging.py  hpctypes.py  logging.conf  results.py  util.py
src/hpc/autoscale/ccbindings/: __init__.py  cluster_service.py  interface.py  legacy.py  mock.py  reproduce.py
src/hpc/autoscale/cost/: azurecost.py
src/hpc/autoscale/example/: basic.py  logging.conf  readme.py  readmeutil.py
swagger/: Clusters.json
templates/: celery.txt  readme.txt
test/hpc/autoscale/: clilib_test.py  hpclogging_test.py  hpctypes_test.py  util_test.py
test/hpc/node/: bucket_test.py  constraints_test.py  limits_test.py  node_test.py  nodemanager_test.py
util/: create_vm_sizes.py  initialze_project.py  install_azscale.sh  package.py
(+33 files in other folders)
