[metadata]
name = cyclecloud-scalelib
version = attr: setup.__version__
author = Ryan Hamel
author_email = ryhamel@microsoft.com
description = Example of building a simple cli autoscaler for a psuedo-HTC scheduler
license = MIT
classifiers =
    Programming Language :: Python :: 3

[flake8]
exclude = "venv"
max-complexity = 25
max-line-length = 88
extend-ignore = F405,E501,W503,E203

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]

[options]
install_requires = cyclecloud-scalelib==1.0.2
python_requires = >=3.7
name = examples-htccli
packages = find: